	it always allowed y < 1 but objected to y > frequency.

     o  Add `difftime' methods for the group generics. (Thereby fixing
        PR#2345)

     o  When assigning names to a vector, a value that is too short is
	padded by character NAs. (Wishlist part of PR#2358)

     o  The postscript() and PDF() drivers now allow the title to be set.


INSTALLATION CHANGES

    o	TITLE files in packages are no longer used, the Title field
	in the DESCRIPTION file being preferred.  TITLE files will be
	ignored both in installed packages and source packages.

    o	When searching for a Fortran 77 compiler, configure by default
	now also looks for Fujitsu's frt and Compaq's fort, but no
	longer for cf77 and cft77.

    o	Configure checks that mixed C/Fortran code can be run before
	checking compatibility on ints and doubles: the latter test
	was sometimes failing because the Fortran libraries were not
	found.

    o	PCRE and bzip2 are built from versions in the R sources if the
	appropriate library is not found.

    o	New configure option --with-lapack to allow high-performance
	LAPACK libraries to be used: a generic LAPACK library will be
	used if found.  This option is not the default.

    o   New configure options --with-libpng, --with-jpeglib, --with-zlib,
        --with-bzlib and --with-pcre, principally to allow these
	libraries to be avoided if they are unsuitable.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' will be removed in the next
        release and users are now warned on every usage: you may even see
        multiple warnings for each usage.

        If environment variable R_NO_UNDERLINE is set to anything of
	positive length then use of `_' becomes a syntax error.

    o	machine(), Machine() and Platform() are defunct.

    o	restart() is defunct.  Use try(), as has long been recommended.

    o	The deprecated arguments `pkg' and `lib' of system.file() have
	been removed.


BUG FIXES
